[gd_scene load_steps=9 format=3 uid="uid://c1q0y3j4b0ho0"]

[ext_resource type="Texture2D" uid="uid://p6dd54egscgq" path="res://Textures/Icons/border_dotted_light.png" id="1_866nk"]
[ext_resource type="Script" path="res://Scripts/UI/components/adv_list_item.gd" id="2_jhtsl"]
[ext_resource type="Texture2D" uid="uid://dyx6v70at8syt" path="res://Textures/Icons/unknown.png" id="2_oosx7"]
[ext_resource type="Texture2D" uid="uid://d1fqd8npldynv" path="res://Textures/Icons/demi-human.png" id="3_xe526"]
[ext_resource type="Theme" uid="uid://m7mvoj5x6lb5" path="res://Resources/UI/main_theme.tres" id="4_q2wmj"]
[ext_resource type="Texture2D" uid="uid://c4qqunxywsf6f" path="res://Textures/Icons/hand_point.png" id="5_s3n33"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_np80s"]
bg_color = Color(0.960784, 0.960784, 0.960784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0kng"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="adv_list_item" type="NinePatchRect"]
texture_filter = 1
offset_right = 224.0
offset_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_q2wmj")
texture = ExtResource("1_866nk")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource("2_jhtsl")

[node name="content" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="portrait" type="TextureRect" parent="content"]
texture_filter = 1
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 54.0
offset_bottom = 54.0
texture = ExtResource("2_oosx7")

[node name="race" type="TextureRect" parent="content"]
layout_mode = 0
offset_left = 58.0
offset_top = 6.0
offset_right = 74.0
offset_bottom = 22.0
texture = ExtResource("3_xe526")
stretch_mode = 2

[node name="name" type="Label" parent="content"]
layout_mode = 1
offset_left = 78.0
offset_top = 3.0
offset_right = 219.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 15
text = "Adventurer Name"
vertical_alignment = 1
text_overrun_behavior = 3

[node name="current" type="NinePatchRect" parent="content"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -30.0
offset_right = 190.0
offset_bottom = -6.0
grow_vertical = 0
texture = ExtResource("1_866nk")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="text" type="Label" parent="content/current"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "Currently: IDLE"
vertical_alignment = 1

[node name="select_btn" type="Button" parent="content"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -30.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
tooltip_text = "Select this adventurer"
mouse_default_cursor_shape = 2
theme = ExtResource("4_q2wmj")
theme_override_constants/h_separation = 1
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_np80s")
theme_override_styles/hover = SubResource("StyleBoxFlat_c0kng")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c0kng")
icon = ExtResource("5_s3n33")
icon_alignment = 1

[node name="level_race" type="Label" parent="content"]
texture_filter = 1
layout_mode = 0
offset_left = 59.0
offset_top = 23.0
offset_right = 196.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "Level X, Human"

[node name="party_status" type="Label" parent="content"]
texture_filter = 1
layout_mode = 0
offset_left = 59.0
offset_top = 39.0
offset_right = 218.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 12
text = "Party: None"
text_overrun_behavior = 3
